Se sube los cambios para registro de proyecto

--- a/frontend_migracion/public/index.html
+++ b/frontend_migracion/public/index.html
@@ -2,16 +2,16 @@
 <html lang="es">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/Processmart.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, user-scalable=yes" />
     <meta name="theme-color" content="#667eea" />
-    <meta name="description" content="Sistema de Gestión Logística - Control de inventarios, órdenes de compra y materiales" />
+    <meta name="description" content="Process-One - Sistema de Gestión Empresarial" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/Processmart.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Sistema de Gestión Logística</title>
+    <title>Process-One | Sistema de Gestión Empresarial</title>
     <style>
       /* Prevenir zoom accidental en iOS en campos de formulario */
       @supports (-webkit-touch-callout: none) {
